# DSA_Memory_management

./: .gitignore  BFMM.c  BFMM.h  CMakeLists.txt  Doxyfile  generate_docs.bash  main.c
documentation/: BFMM_Docs.tex
src/: BFMM.c  BFMM.h
